test new features in java x